--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="icon" type="image/x-icon" href="https://godeamon.github.io/favicon.ico">
 <link rel="apple-touch-icon-precomposed" href="https://godeamon.github.io/favicon.png">
 
-<link rel="stylesheet" href="https://godeamon.github.io/css/style.css?rnd=1587479741" />
+<link rel="stylesheet" href="https://godeamon.github.io/css/style.css?rnd=1587709295" />
 
 <meta property="og:title" content="Attitude is altitude" />
 <meta property="og:description" content="区块链、Go" />
@@ -188,26 +188,7 @@ Go 源码  Go runtime Go mem Go map, chan, slice and so on source code Go epoll 
         </header>
 
         <div class="content">
-            我   毕业于北华大学。
-  现就职北京一家区块链公司。
-  热爱 Go 语言，热爱分享，热爱开源。
-  email：rayforce.lee@gmail.com
-  毕业于北华大学。
-  现就职北京一家区块链公司。
-  热爱 Go 语言，热爱分享，热爱开源。
-  email：rayforce.lee@gmail.com
-  毕业于北华大学。
-  现就职北京一家区块链公司。
-  热爱 Go 语言，热爱分享，热爱开源。
-  email：rayforce.lee@gmail.com
-  毕业于北华大学。
-  现就职北京一家区块链公司。
-  热爱 Go 语言，热爱分享，热爱开源。
-  email：rayforce.lee@gmail.com
-  毕业于北华大学。
-  现就职北京一家区块链公司。
-  热爱 Go 语言，热爱分享，热爱开源。
-  email：rayforce.
+            我  毕业于北华大学。 现就职北京一家区块链公司。 热爱 Go 语言，热爱分享，热爱开源。 email：rayforce.lee@gmail.com  
         </div>
 
         
